--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-server.port = 8081
+server.port = 29428
 #Conection database
-spring.datasource.url=jdbc:mysql://localhost:3306/shop
+spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:29428/railway
+#spring.datasource.url=jdbc:mysql://localhost:3306/shop
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=NSqKsbuGjsiBjCsotznRDecAxeueRVol
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
